genre - give_sent/return　アソシエーション追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,7 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 .login{
   flex-direction: column;
 }
+
+#btnOpenMenu {
+  text-decoration: none!important;
+}
