--- a/app/views/family_persons/index.html.erb
+++ b/app/views/family_persons/index.html.erb
@@ -24,7 +24,7 @@
           </thead>
           <% @family_persons.each do |family_person| %>
           <tr>
-            <td><%= family_person.family_person %></td>
+            <td><%= link_to family_person.family_person,family_person_path(family_person)%></td>
             <td>
               <div class="d-flex justify-content-end">
                 <%= link_to edit_family_person_path(family_person),class: "btn btn-outline-dark, rounded-circle btn-lg", method: :get do %>
