--- a/app/views/give_items/index.html.erb
+++ b/app/views/give_items/index.html.erb
@@ -20,7 +20,7 @@
           <% @give_items.each_with_index do |give_item,i| %>
           <thead class="table-danger">
             <tr>
-              <th>ITEM No. <%=i +1 %></th>
+              <th>GIFT ITEM No. <%=i +1 %></th>
               <th></th>
             </tr>
           </thead>
