--- a/app/views/sent_items/index.html.erb
+++ b/app/views/sent_items/index.html.erb
@@ -20,7 +20,7 @@
           <% @sent_items.each_with_index do |sent_item,i| %>
           <thead class="table-info">
             <tr>
-              <th>ITEM No. <%=i+1%></th>
+              <th>SENT ITEM No. <%=i+1%></th>
               <th></th>
             </tr>
           </thead>
