--- a/app/views/sent_persons/edit.html.erb
+++ b/app/views/sent_persons/edit.html.erb
@@ -3,6 +3,7 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
+  <h3><i class="fa-solid fa-user"> Senter edit</i></h3>
 </div>
 <div class="row">
   <div class="col mx-3">
