--- a/app/views/sent_returns/_sent_return_form.html.erb
+++ b/app/views/sent_returns/_sent_return_form.html.erb
@@ -4,7 +4,7 @@
   <% end %>
   <div class="row">
     <div class="col-100 mx-auto">
-      <i class="fas fa-gift fa-3x"> return gift</i>
+      <h3><i class="fas fa-gift"> return gift</i></h3>
     </div>
   </div>
   <div class="row">
