--- a/app/views/family_persons/show.html.erb
+++ b/app/views/family_persons/show.html.erb
@@ -4,13 +4,12 @@
       <table>
         <tr>
           <th>
-            <div class="m-3">
-              <i class="fa-solid fa-user fa-2x"> Presenter : </i>
+            <div class="mx-3">
+              <i class="fa-solid fa-user fa-2x"> family : </i>
             </div>
           </th>
           <td>
-            <h3><%= @give_person.give_person%></h3>
-            <%= @give_person.count%>
+            <h3><%= @family_person.family_person%></h3>
           </td>
         </tr>
       </table>
@@ -20,8 +19,8 @@
         <div class="col">
           <div class="d-grid gap-3">
             <table class="table table-hover">
-              <% @give_persons.each_with_index do |give_person_give_item,i| %>
-              <thead class="table-warning">
+              <% @family_persons.each_with_index do |family_person_give_item,i| %>
+              <thead class="table-success">
                 <tr>
                   <th>ITEM No. <%=i+1%></th>
                   <th></th>
@@ -29,24 +28,25 @@
               </thead>
               <tr>
                 <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
-                <td class="border-bottom"><%= link_to give_person_give_item.product,give_item_path(@give_persons.ids)
-                  %></td>
+                <td class="border-bottom">
+                  <%= link_to family_person_give_item.product,give_item_path(@family_persons.ids) %>
+                </td>
               </tr>
               <tr>
-                <th><i class="far fa-user"> : to</i></th>
-                <td><%= give_person_give_item.family_person.family_person %></td>
+                <th><i class="far fa-user"> : from</i></th>
+                <td><%= family_person_give_item.give_person.give_person %></td>
               </tr>
               <tr>
                 <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
-                <td class="border-bottom"><%= give_person_give_item.price %></td>
+                <td class="border-bottom"><%= family_person_give_item.price %></td>
               </tr>
               <tr>
                 <th><i class="far fa-comment-dots"> reason</i></th>
-                <td class="border-bottom"><%= give_person_give_item.reason %></td>
+                <td class="border-bottom"><%= family_person_give_item.reason %></td>
               </tr>
               <tr>
                 <th><i class="far fa-calendar-alt"> date</i></th>
-                <td><%= give_person_give_item.give_day %></td>
+                <td><%= family_person_give_item.give_day %></td>
               </tr>
               <% end %>
             </table>
@@ -54,7 +54,7 @@
         </div>
         <div class="container">
           <p>
-            <%= link_to  give_persons_path, class: "btn btn-default rounded-pill" do %>
+            <%= link_to  family_persons_path, class: "btn btn-default rounded-pill" do %>
             <i class="fas fa-arrow-circle-left"></i>
             <span>back</span>
             <% end %>
