--- a/app/views/give_items/show.html.erb
+++ b/app/views/give_items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <i class="far fa-flag fa-2x"> detail</i>
+  <h3><i class="far fa-flag"> detail</i></h3>
 </div>
 <div class="container">
   <div class="row">
@@ -29,7 +29,8 @@
             <div class="m-5">
               <% if @give_item.image? %>
               <%= image_tag @give_item.image.url %>
-              <% elsif @give_item.genre.genre == "お金" %>
+              <% elsif %>
+              <% @give_item.genre.genre == "お金" %>
               <%= image_tag "/assets/money001.png", class: "money_image" %>
               <% else %>
               <%= image_tag "/assets/present.png", class: "present_image" %>
