--- a/app/views/sent_items/show.html.erb
+++ b/app/views/sent_items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <i class="far fa-flag fa-4x"> detail</i>
+  <h3><i class="far fa-flag"> detail</i></h3>
 </div>
 <div class="container">
   <div class="row">
