--- a/app/views/give_returns/_give_return_form.html.erb
+++ b/app/views/give_returns/_give_return_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col mx-4">
-    <i class="fas fa-gift fa-2x"> return gift</i>
+    <h3><i class="fas fa-gift"> return gift</i></h3>
   </div>
 </div>
 <div class="row">
