view フォント変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,7 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 #btnOpenMenu {
   text-decoration: none!important;
 }
+
+body {
+  font-family: "Comic Sans MS";
+}
