--- a/app/views/give_items/edit.html.erb
+++ b/app/views/give_items/edit.html.erb
@@ -4,7 +4,7 @@
     <% if flash.now[:notice] %>
     <p class="notice"><%= flash.now[:notice] %></p>
     <% end %>
-    <h3><i class="far fa-edit"> give_item edit</i></h3>
+    <h3><i class="far fa-edit"></i> Give Item Edit</h3>
   </div>
 </div>
 <%= render "give_items/give_item_form" %>
