--- a/app/views/family_persons/edit.html.erb
+++ b/app/views/family_persons/edit.html.erb
@@ -3,7 +3,7 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <h3><i class=" fa-solid fa-users"> family edit</i></h3>
+  <h3><i class=" fa-solid fa-users"></i> Family Edit</h3>
 </div>
 <div class="row">
   <div class="col mx-3">
@@ -11,7 +11,7 @@
       <%= form_with model: @family_person,local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 45%"><i class=" fa-solid fa-users">　family_person</th>
+          <th style="width: 45%"><i class=" fa-solid fa-users"></i> Family Person</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -23,13 +23,13 @@
       <p class="mt-5">
         <%= link_to  family_persons_path, class: "btn btn-default rounded-pill" do %>
         <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
+          Back
         <% end %>
         <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-        <i class="far fa-check-circle"> save</i>
+        <i class="far fa-check-circle"></i> Save
         <% end %>
         <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-        <i class="fas fa-home"> home</i>
+        <i class="fas fa-home"></i> Home
         <% end %>
       </p>
     </div>
