--- a/app/views/family_persons/index.html.erb
+++ b/app/views/family_persons/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class=" fa-solid fa-users"> family index</i></h3>
+      <h3><i class=" fa-solid fa-users"></i> Family Index</h3>
     </div>
   </div>
   <div class="text-right">
     <%= link_to new_family_person_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
-    <i class=" fa-solid fa-users"> new</i>
+    <i class=" fa-solid fa-users"></i> New
     <% end %>
   </div>
 </div>
@@ -16,7 +16,7 @@
       <div class="d-grid gap-3">
         <table class="table table-hover">
           <thead class="table-success">
-            <th><i class=" fa-solid fa-users"> family</i>
+            <th><i class=" fa-solid fa-users"></i> Family
             </th>
             <th></th>
           </thead>
@@ -38,7 +38,7 @@
         <p>
           <%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
         </p>
       </div>
