--- a/app/views/genres/_genre_form.html.erb
+++ b/app/views/genres/_genre_form.html.erb
@@ -4,7 +4,7 @@
       <%= form_with model: @genre,local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-layer-group">　Genre</th>
+          <th style="width: 30%"><i class="fas fa-layer-group"></i> Genre</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -16,13 +16,13 @@
       <p class="mt-5">
         <%= link_to  genres_path, class: "btn btn-default rounded-pill" do %>
         <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
+          Back
         <% end %>
         <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-        <i class="far fa-check-circle"> save</i>
+        <i class="far fa-check-circle"></i> Save
         <% end %>
         <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-        <i class="fas fa-home"> home</i>
+        <i class="fas fa-home"></i> Home
         <% end %>
       </p>
     </div>
