--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class="fas fa-layer-group"> Genre index</i></h3>
+      <h3><i class="fas fa-layer-group"></i> Genre Index</h3>
     </div>
   </div>
   <div class="text-right">
     <%= link_to new_genre_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
-    <i class="fas fa-layer-group"> new</i>
+    <i class="fas fa-layer-group"></i> New
     <% end %>
   </div>
 </div>
@@ -16,7 +16,7 @@
       <div class="d-grid gap-3">
         <table class="table table-hover">
           <thead class="table-primary">
-            <th><i class="fas fa-layer-group"> genre</i></th>
+            <th><i class="fas fa-layer-group"></i> Genre</th>
             <th></th>
           </thead>
           <% @genres.each do |genre| %>
@@ -36,7 +36,7 @@
         </table>
         <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
         </p>
       </div>
