--- a/app/views/genres/new.html.erb
+++ b/app/views/genres/new.html.erb
@@ -3,6 +3,6 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <h3><i class="fas fa-layer-group"> genre register</i></h3>
+  <h3><i class="fas fa-layer-group"></i> Genre Register</h3>
 </div>
 <%= render "genres/genre_form" %>
