--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -5,7 +5,7 @@
         <tr>
           <th>
             <div class="m-3">
-              <i class="fas fa-layer-group fa-2x"> genre : </i>
+              <i class="fas fa-layer-group fa-2x"></i> Genre : 
             </div>
           </th>
           <td>
@@ -22,28 +22,28 @@
               <% @genres.each_with_index do |genre_give_item,i| %>
               <thead class="table-warning">
                 <tr>
-                  <th>ITEM No. <%=i+1%></th>
+                  <th>Item No. <%=i+1%></th>
                   <th></th>
                 </tr>
               </thead>
               <tr>
-                <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+                <th class="border-bottom style=width 50%"><i class="fas fa-gifts"></i> Gift</th>
                 <td class="border-bottom"><%= genre_give_item.product%></td>
               </tr>
               <tr>
-                <th><i class="fa-solid fa-user"> : from</i></th>
+                <th><i class="fa-solid fa-user"></i> : From</th>
                 <td><%= genre_give_item.give_person.give_person %></td>
               </tr>
               <tr>
-                <th><i class="far fa-user"> : to</i></th>
+                <th><i class="far fa-user"></i> : To</th>
                 <td><%= genre_give_item.family_person.family_person %></td>
               </tr>
               <tr>
-                <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+                <th class="border-bottom"><i class="far fa-money-bill-alt"></i> Amount</th>
                 <td class="border-bottom"><%= genre_give_item.price %></td>
               </tr>
               <tr>
-                <th><i class="far fa-comment-dots"> reason</i></th>
+                <th><i class="far fa-comment-dots"></i> Reason</th>
                 <td class="border-bottom"><%= genre_give_item.reason %></td>
               </tr>
               <% end %>
@@ -54,10 +54,10 @@
           <p>
             <%= link_to  genres_path, class: "btn btn-default rounded-pill" do %>
             <i class="fas fa-arrow-circle-left"></i>
-            <span>back</span>
+              Back
             <% end %>
             <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-            <i class="fas fa-home"> home</i>
+            <i class="fas fa-home"></i> Home
             <% end %>
           </p>
         </div>
