--- a/app/views/give_items/_give_item_form.html.erb
+++ b/app/views/give_items/_give_item_form.html.erb
@@ -4,7 +4,7 @@
       <%= form_with model: @give_item,local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
+          <th style="width: 30%"><i class="fas fa-gifts"></i> Gift</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -13,7 +13,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fa-solid fa-user"> presenter</i></th>
+          <th style="width: 30%"><i class="fa-solid fa-user"></i> presenter</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-user"> family</th>
+          <th style="width: 30%"><i class="far fa-user"></i> Family</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -35,7 +35,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-layer-group"> genre</i></th>
+          <th style="width: 30%"><i class="fas fa-layer-group"></i> Genre</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -46,7 +46,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+          <th style="width: 30%"><i class="far fa-money-bill-alt"></i> Amount</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -55,7 +55,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-comment-dots"> reason</i></th>
+          <th style="width: 30%"><i class="far fa-comment-dots"></i> Reason</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-file-alt"> text</i></th>
+          <th style="width: 30%"><i class="far fa-file-alt"></i> Text</th>
           <th style="width: 5%">
             <div></div>
           </th>
@@ -73,7 +73,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-calendar-alt"> date</th>
+          <th style="width: 30%"><i class="far fa-calendar-alt"></i> Date</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -82,7 +82,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
+          <th style="width: 30%"><i class="fas fa-image"></i> Photo</th>
           <th style="width: 5%">
           </th>
           <td style="width: auto%">
@@ -95,13 +95,13 @@
     <p class="mt-3">
       <%= link_to  give_items_path, class: "btn btn-default rounded-pill" do %>
       <i class="fas fa-arrow-circle-left"></i>
-      <span>back</span>
+        Back
       <% end %>
       <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-      <i class="far fa-check-circle"> save</i>
+      <i class="far fa-check-circle"></i> Save
       <% end %>
       <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-      <i class="fas fa-home"> home</i>
+      <i class="fas fa-home"></i> Home
       <% end %>
     </p>
     <% end %>
