--- a/app/views/give_items/index.html.erb
+++ b/app/views/give_items/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class="fas fa-gifts"> gift index</i></h3>
+      <h3><i class="fas fa-gifts"></i> Gift Index</h3>
     </div>
   </div>
   <div class="text-right">
     <%= link_to new_give_item_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
-    <i class="fas fa-gift"> new</i>
+    <i class="fas fa-gift"></i> New
     <% end %>
   </div>
 </div>
@@ -18,43 +18,43 @@
           <% @give_items.each_with_index do |give_item,i| %>
           <thead class="table-danger">
             <tr>
-              <th>GIFT ITEM No. <%=i +1 %></th>
+              <th>Gift Item No. <%=i +1 %></th>
               <th></th>
             </tr>
           </thead>
           <tr>
-            <th><i class="fas fa-gifts"> gift</i></th>
+            <th><i class="fas fa-gifts"></i> Gift</th>
             <td><%= link_to give_item.product,give_item_path(give_item)%></td>
           </tr>
           <tr>
-            <th><i class="fa-solid fa-user"> : from</i></th>
+            <th><i class="fa-solid fa-user"></i> : From</th>
             <td><%= give_item.give_person.give_person %></td>
           </tr>
           <tr>
-            <th><i class="far fa-user"> : to</i></th>
+            <th><i class="far fa-user"></i> : To</th>
             <td><%= give_item.family_person.family_person %></td>
           </tr>
           <tr>
-            <th><i class="far fa-money-bill-alt"> amount</i></th>
+            <th><i class="far fa-money-bill-alt"></i> Amount</th>
             <td><%= give_item.price %></td>
           </tr>
           <tr>
-            <th><i class="far fa-comment-dots"> reason</i></th>
+            <th><i class="far fa-comment-dots"></i> Reason</th>
             <td><%= give_item.reason %></td>
           </tr>
           <tr>
-            <th><i class="far fa-calendar-alt"> date</i></th>
+            <th><i class="far fa-calendar-alt"></i> Date</th>
             <td><%= give_item.give_day %></td>
           </tr>
           <% if give_item.have_return? %>
           <tr>
-            <th><i class="fas fa-reply"></i><i class="fas fa-gift"> return item count</i></th>
+            <th><i class="fas fa-reply"></i><i class="fas fa-gift"></i> Return Item Count</th>
             <td>
               <%= link_to give_item.give_returns.count, index_show_give_returns_path(give_item) %>
             </td>
           </tr>
           <tr>
-            <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return all amount</i></th>
+            <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"></i> Return All Amount</th>
             <td>
               <%= give_item.total_price %>
             </td>
@@ -63,7 +63,7 @@
           <tr>
             <th>
               <%= link_to new_give_return_path(give_item), class: "btn btn-outline-danger rounded-pill", method: :get do %>
-              <i class="fas fa-gift"> return item</i>
+              <i class="fas fa-gift"></i> Return Item
               <% end %>
             </th>
             <td></td>
@@ -83,7 +83,7 @@
         </table>
         <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
         </p>
       </div>
