--- a/app/views/give_persons/index.html.erb
+++ b/app/views/give_persons/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class="fa-solid fa-user"> Presenter index</i></h3>
+      <h3><i class="fa-solid fa-user"></i> Presenter Index</h3>
     </div>
   </div>
   <div class="text-right">
     <%= link_to new_give_person_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
-    <i class="fa-solid fa-user"> new</i>
+    <i class="fa-solid fa-user"></i> New
     <% end %>
   </div>
 </div>
@@ -26,11 +26,11 @@
             </tr>
           </thead>
           <tr>
-            <th><i class="fa-solid fa-user"> name</i></th>
+            <th><i class="fa-solid fa-user"></i> Name</th>
             <td><%= link_to give_person.give_person,give_person_path(give_person)%></td>
           </tr>
           <tr>
-            <th><i class="far fa-handshake"> Connection</i></th>
+            <th><i class="far fa-handshake"></i> Connection</th>
             <td><%= give_person.involvement %></td>
           </tr>
           <tr>
@@ -47,7 +47,7 @@
         </table>
         <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
         </p>
       </div>
