--- a/app/views/give_persons/show.html.erb
+++ b/app/views/give_persons/show.html.erb
@@ -5,12 +5,12 @@
         <tr>
           <th>
             <div class="m-3">
-              <h3><i class="fa-solid fa-user"> Presenter : <%= @give_person.give_person%></i></h3>
+              <h3><i class="fa-solid fa-user"></i> Presenter : <%= @give_person.give_person%></h3>
             </div>
             <p>
-              <i class="fas fa-grip-horizontal"> total count : <%= @give_persons.count %> pcs </i>
+              <i class="fas fa-grip-horizontal"></i> Total Count : <%= @give_persons.count %> pcs 
             </p>
-            <i class="fas fa-money-check-alt"> total amount : ¥ <%= @give_person.second_total_price %></i>
+            <i class="fas fa-money-check-alt"></i> Total Amount : ¥ <%= @give_person.second_total_price %>
           </th>
         </tr>
       </table>
@@ -24,29 +24,29 @@
             <% @give_persons.each_with_index do |give_person_give_item,i| %>
             <thead class="table-warning">
               <tr>
-                <th>ITEM No. <%=i+1%></th>
+                <th>Item No. <%=i+1%></th>
                 <th></th>
               </tr>
             </thead>
             <tr>
-              <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+              <th class="border-bottom style=width 50%"><i class="fas fa-gifts"></i> Gift</th>
               <td class="border-bottom"><%= link_to give_person_give_item.product,give_item_path(@give_persons.ids)
                   %></td>
             </tr>
             <tr>
-              <th><i class="far fa-user"> : to</i></th>
+              <th><i class="far fa-user"></i> : To</th>
               <td><%= give_person_give_item.family_person.family_person %></td>
             </tr>
             <tr>
-              <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+              <th class="border-bottom"><i class="far fa-money-bill-alt"></i> Amount</th>
               <td class="border-bottom"><%= give_person_give_item.price %></td>
             </tr>
             <tr>
-              <th><i class="far fa-comment-dots"> reason</i></th>
+              <th><i class="far fa-comment-dots"></i> Reason</th>
               <td class="border-bottom"><%= give_person_give_item.reason %></td>
             </tr>
             <tr>
-              <th><i class="far fa-calendar-alt"> date</i></th>
+              <th><i class="far fa-calendar-alt"></i> Date</th>
               <td><%= give_person_give_item.give_day %></td>
             </tr>
             <% end %>
@@ -57,14 +57,13 @@
         <p>
           <%= link_to  give_persons_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
           <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-          <i class="fas fa-home"> home</i>
+          <i class="fas fa-home"></i> Home
           <% end %>
         </p>
       </div>
     </div>
   </div>
-</div>
 </div>
