--- a/app/views/give_returns/_give_return_form.html.erb
+++ b/app/views/give_returns/_give_return_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col mx-4">
-    <h3><i class="fas fa-gift"> return gift</i></h3>
+    <h3><i class="fas fa-gift"></i> Return Gift</h3>
   </div>
 </div>
 <div class="row">
@@ -9,7 +9,7 @@
       <%= form_with model: @give_return,local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 40%"><i class="fas fa-gifts"> return gift</i></th>
+          <th style="width: 40%"><i class="fas fa-gifts"></i> Return Gift</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-layer-group"> genre</th>
+          <th style="width: 30%"><i class="fas fa-layer-group"></i> Genre</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -29,7 +29,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+          <th style="width: 30%"><i class="far fa-money-bill-alt"></i> Amount</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -38,7 +38,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-file-alt"> text</i></th>
+          <th style="width: 30%"><i class="far fa-file-alt"></i> Text</th>
           <th style="width: 5%">
             <div></div>
           </th>
@@ -47,7 +47,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-calendar-alt"> return date</th>
+          <th style="width: 30%"><i class="far fa-calendar-alt"></i> Return Date</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -56,7 +56,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
+          <th style="width: 30%"><i class="fas fa-image"></i> photo</th>
           <th style="width: 5%">
           </th>
           <td style="width: auto%">
@@ -74,16 +74,15 @@
     <p class="mt-3">
       <%= link_to  give_items_path, class: "btn btn-default rounded-pill" do %>
       <i class="fas fa-arrow-circle-left"></i>
-      <span>back</span>
+        Back
       <% end %>
       <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-      <i class="far fa-check-circle"> save</i>
+      <i class="far fa-check-circle"></i> Save
       <% end %>
       <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-      <i class="fas fa-home"> home</i>
+      <i class="fas fa-home"></i> Home
       <% end %>
     </p>
     <% end %>
   </div>
-</div>
 </div>
