--- a/app/views/give_returns/show.html.erb
+++ b/app/views/give_returns/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <h3><i class="far fa-flag"> detail</i></h3>
+  <h3><i class="far fa-flag"></i> Detail</h3>
 </div>
 <div class="container">
   <div class="row">
@@ -8,7 +8,7 @@
         <tr>
           <th>
             <div class="m-3">
-              <i class="fas fa-child"> Registered person</i>
+              <i class="fas fa-child"></i> Registered Person
             </div>
           </th>
         </tr>
@@ -44,31 +44,31 @@
       <div class="mt-3 table-hover">
         <table>
           <tr>
-            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"></i> Gift</th>
             <td class="border-bottom"><%= @give_return.product%></td>
           </tr>
           <tr>
-            <th class="border-bottom style=width 50%"><i class="far fa-user"> : from</i></th>
+            <th class="border-bottom style=width 50%"><i class="far fa-user"></i> : From</th>
             <td class="border-bottom"><%= @give_return.give_item.family_person.family_person %></td>
           </tr>
           <tr>
-            <th class="border-bottom style=width 50%"><i class="fa-solid fa-user"> : to</i></th>
+            <th class="border-bottom style=width 50%"><i class="fa-solid fa-user"></i> : To</th>
             <td class="border-bottom"><%= @give_return.give_item.give_person.give_person %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="fas fa-layer-group"> genre</i></th>
+            <th class="border-bottom"><i class="fas fa-layer-group"></i> Genre</th>
             <td class="border-bottom"><%= @give_return.genre.genre %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+            <th class="border-bottom"><i class="far fa-money-bill-alt"></i> Amount</th>
             <td class="border-bottom"><%= @give_return.price %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-file-alt"> text</i>
+            <th class="border-bottom"><i class="far fa-file-alt"></i> Text
             <td class="border-bottom"><%= @give_return.introduction %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-calendar-alt"> Present date</i></th>
+            <th class="border-bottom"><i class="far fa-calendar-alt"></i> Present Date</th>
             <td class="border-bottom"><%= @give_return.return_day %></td>
           </tr>
         </table>
@@ -78,10 +78,10 @@
       <p>
         <%= link_to  give_items_path, class: "btn btn-default rounded-pill" do %>
         <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
+          Back
         <% end %>
         <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-        <i class="fas fa-home"> home</i>
+        <i class="fas fa-home"></i> Home
         <% end %>
       </p>
     </div>
