--- a/app/views/sent_items/_sent_item_form.html.erb
+++ b/app/views/sent_items/_sent_item_form.html.erb
@@ -4,7 +4,7 @@
       <%= form_with model: @sent_item, local: true do |f| %>
       <tr class="col-xs-2">
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-gifts"> gift</i></th>
+          <th style="width: 30%"><i class="fas fa-gifts"></i> Gift</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-user"> : from</th>
+          <th style="width: 30%"><i class="far fa-user"></i> : From</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fa-solid fa-user"> : to</i></th>
+          <th style="width: 30%"><i class="fa-solid fa-user"></i> : To</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-layer-group"> genre</i></th>
+          <th style="width: 30%"><i class="fas fa-layer-group"></i> Genre</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -48,7 +48,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-money-bill-alt"> amount</i></th>
+          <th style="width: 30%"><i class="far fa-money-bill-alt"></i> Amount</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -57,7 +57,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-comment-dots"> reason</i></th>
+          <th style="width: 30%"><i class="far fa-comment-dots"></i> Reason</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -66,7 +66,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-file-alt"> text</i></th>
+          <th style="width: 30%"><i class="far fa-file-alt"></i> Text</th>
           <th style="width: 5%">
             <div></div>
           </th>
@@ -75,7 +75,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="far fa-calendar-alt"> date</th>
+          <th style="width: 30%"><i class="far fa-calendar-alt"></i> Date</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
@@ -84,7 +84,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 30%"><i class="fas fa-image"> photo</i></th>
+          <th style="width: 30%"><i class="fas fa-image"></i> Photo</th>
           <th style="width: 5%">
           </th>
           <td style="width: auto%">
@@ -97,16 +97,15 @@
     <p class="mt-3">
       <%= link_to  sent_items_path, class: "btn btn-default rounded-pill" do %>
       <i class="fas fa-arrow-circle-left"></i>
-      <span>back</span>
+        Back
       <% end %>
       <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
-      <i class="far fa-check-circle"> save</i>
+      <i class="far fa-check-circle"></i> Save
       <% end %>
       <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-      <i class="fas fa-home"> home</i>
+      <i class="fas fa-home"></i> Home
       <% end %>
     </p>
     <% end %>
   </div>
-</div>
 </div>
