--- a/app/views/sent_items/edit.html.erb
+++ b/app/views/sent_items/edit.html.erb
@@ -2,6 +2,6 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class="fas fa-gift fa-2x"> gift edit</i>
+  <i class="fas fa-gift fa-2x"></i> Gift Edit
 </div>
 <%= render "sent_items/sent_item_form" %>
