--- a/app/views/sent_items/index.html.erb
+++ b/app/views/sent_items/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class="fas fa-gifts"> sent index</i></h3>
+      <h3><i class="fas fa-gifts"></i> Sent Index</h3>
     </div>
   </div>
   <div class="text-right">
     <%= link_to new_sent_item_path, class: "btn btn-outline-info rounded-pill", method: :get do %>
-    <i class="fas fa-gift"> new</i>
+    <i class="fas fa-gift"></i> New
     <% end %>
   </div>
 </div>
@@ -18,43 +18,43 @@
           <% @sent_items.each_with_index do |sent_item,i| %>
           <thead class="table-info">
             <tr>
-              <th>SENT ITEM No. <%=i+1%></th>
+              <th>Sent Item No. <%=i+1%></th>
               <th></th>
             </tr>
           </thead>
           <tr>
-            <th><i class="fas fa-gifts"> gift</i></th>
+            <th><i class="fas fa-gifts"></i> Gift</th>
             <td><%= link_to sent_item.product,sent_item_path(sent_item)%></td>
           </tr>
           <tr>
-            <th><i class="far fa-user"> : from</i></th>
+            <th><i class="far fa-user"></i> : From</th>
             <td><%= sent_item.family_person.family_person %></td>
           </tr>
           <tr>
-            <th><i class="fa-solid fa-user"> : to</i></th>
+            <th><i class="fa-solid fa-user"></i> : To</th>
             <td><%= sent_item.sent_person.sent_person %></td>
           </tr>
           <tr>
-            <th><i class="far fa-money-bill-alt"> amount</i></th>
+            <th><i class="far fa-money-bill-alt"></i> Amount</th>
             <td><%= sent_item.price %></td>
           </tr>
           <tr>
-            <th><i class="far fa-comment-dots"> reason</i></th>
+            <th><i class="far fa-comment-dots"></i> Reason</th>
             <td><%= sent_item.reason %></td>
           </tr>
           <tr>
-            <th><i class="far fa-calendar-alt"> date</i></th>
+            <th><i class="far fa-calendar-alt"></i> Date</th>
             <td><%= sent_item.sent_day %></td>
           </tr>
           <% if sent_item.have_return? %>
           <tr>
-            <th><i class="fas fa-reply"></i><i class="fas fa-gift"> return item count</i></th>
+            <th><i class="fas fa-reply"></i><i class="fas fa-gift"></i> Return Item Count</th>
             <td>
               <%= link_to sent_item.sent_returns.count, index_show_sent_returns_path(sent_item) %>
             </td>
           </tr>
           <tr>
-            <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return all amount</i></th>
+            <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"></i> Return All Amount</th>
             <td>
               <%= sent_item.total_price %>
             </td>
@@ -63,7 +63,7 @@
           <tr>
             <th>
               <%= link_to new_sent_return_path(sent_item), class: "btn btn-outline-info rounded-pill", method: :get do %>
-              <i class="fas fa-gift"> return item</i>
+              <i class="fas fa-gift"></i> Return Item
               <% end %>
             </th>
             <td></td>
@@ -81,7 +81,7 @@
         </table>
         <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
         </p>
       </div>
