--- a/app/views/sent_items/new.html.erb
+++ b/app/views/sent_items/new.html.erb
@@ -3,6 +3,6 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class="fas fa-gift fa-2x"> gift register</i>
+  <i class="fas fa-gift fa-2x"></i> Gift Register
 </div>
 <%= render "sent_items/sent_item_form" %>
