--- a/app/views/sent_items/show.html.erb
+++ b/app/views/sent_items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <h3><i class="far fa-flag"> detail</i></h3>
+  <h3><i class="far fa-flag"></i> Detail</h3>
 </div>
 <div class="container">
   <div class="row">
@@ -8,7 +8,7 @@
         <tr>
           <th>
             <div class="m-3">
-              <i class="fas fa-child"> Registered person</i>
+              <i class="fas fa-child"></i> Registered Person
             </div>
           </th>
         </tr>
@@ -43,47 +43,47 @@
       <div class="mt-3 table-hover">
         <table>
           <tr>
-            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"></i> Gift</th>
             <td class="border-bottom"><%= @sent_item.product%></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-user"> :from ( family ) </i></th>
+            <th class="border-bottom"><i class="far fa-user"></i> :From ( family ) </th>
             <td class="border-bottom"><%= @sent_item.family_person.family_person %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="fa-solid fa-user"> :to ( presenter )</i></th>
+            <th class="border-bottom"><i class="fa-solid fa-user"></i> :To ( presenter )</th>
             <td class="border-bottom"><%= @sent_item.sent_person.sent_person %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="fas fa-layer-group"> genre</i></th>
+            <th class="border-bottom"><i class="fas fa-layer-group"></i> Genre</th>
             <td class="border-bottom"><%= @sent_item.genre.genre %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+            <th class="border-bottom"><i class="far fa-money-bill-alt"></i> Amount</th>
             <td class="border-bottom"><%= @sent_item.price %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-comment-dots"> reason</i></th>
+            <th class="border-bottom"><i class="far fa-comment-dots"></i> Reason</th>
             <td class="border-bottom"><%= @sent_item.reason %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-file-alt"> text</i>
+            <th class="border-bottom"><i class="far fa-file-alt"></i> Text
             <td class="border-bottom"><%= @sent_item.introduction %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-calendar-alt"> Present date</i></th>
+            <th class="border-bottom"><i class="far fa-calendar-alt"></i> Present Date</th>
             <td class="border-bottom"><%= @sent_item.sent_day %></td>
           </tr>
           <% if @sent_item.have_return? %>
           <% @sent_item.sent_returns.each do |sent_item_return| %>
           <tr>
-            <th class="border-bottom"><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
+            <th class="border-bottom"><i class="fas fa-reply"></i><i class="fas fa-gift"></i> Return Item</th>
             <td class="border-bottom">
               <%= sent_item_return.product %>
             </td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return amount</i>
+            <th class="border-bottom"><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"></i> Return Amount
             </th>
             <td class="border-bottom">
               <%= sent_item_return.price %>
@@ -92,7 +92,7 @@
           <tr>
             <% end %>
             <% end %>
-            <th><i class="far fa-calendar-check"> create date</i></th>
+            <th><i class="far fa-calendar-check"></i> Create Date</th>
             <td><%= @sent_item.created_at.to_s(:datetime_jp)%></td>
           </tr>
         </table>
@@ -102,10 +102,10 @@
       <p>
         <%= link_to  sent_items_path, class: "btn btn-default rounded-pill" do %>
         <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
+          Back
         <% end %>
         <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-        <i class="fas fa-home"> home</i>
+        <i class="fas fa-home"></i> Home
         <% end %>
       </p>
     </div>
