--- a/app/views/sent_persons/index.html.erb
+++ b/app/views/sent_persons/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-auto">
-      <h3><i class="fa-solid fa-user"> Senter index</i></h3>
+      <h3><i class="fa-solid fa-user"></i> Senter Index</h3>
     </div>
   </div>
   <div class="text-right">
     <%= link_to new_sent_person_path, class: "btn btn-outline-secondary rounded-pill", method: :get do %>
-    <i class="fa-solid fa-user"> new</i>
+    <i class="fa-solid fa-user"></i> New
     <% end %>
   </div>
 </div>
@@ -23,11 +23,11 @@
             </tr>
           </thead>
           <tr>
-            <th><i class="fa-solid fa-user"> name</i></th>
+            <th><i class="fa-solid fa-user"></i> Name</th>
             <td><%= link_to sent_person.sent_person,sent_person_path(sent_person)%></td>
           </tr>
           <tr>
-            <th><i class="far fa-handshake"> Connection</i></th>
+            <th><i class="far fa-handshake"></i> Connection</th>
             <td><%= sent_person.involvement %></td>
           </tr>
           <tr>
@@ -44,7 +44,7 @@
         </table>
         <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
-          <span>back</span>
+            Back
           <% end %>
         </p>
       </div>
