--- a/app/views/sent_persons/show.html.erb
+++ b/app/views/sent_persons/show.html.erb
@@ -5,12 +5,12 @@
         <tr>
           <th>
             <div class="m-3">
-              <h3><i class="fa-solid fa-user"> senter : <%= @sent_person.sent_person%></i></h3>
+              <h3><i class="fa-solid fa-user"></i> Senter : <%= @sent_person.sent_person%></h3>
             </div>
             <p>
-              <i class="fas fa-grip-horizontal"> total count : <%= @sent_persons.count %> pcs </i>
+              <i class="fas fa-grip-horizontal"></i> Total Count : <%= @sent_persons.count %> pcs
             </p>
-            <i class="fas fa-money-check-alt"> total amount : ¥ <%= @sent_person.second_total_price %></i>
+            <i class="fas fa-money-check-alt"></i> Total Amount : ¥ <%= @sent_person.second_total_price %>
           </th>
         </tr>
       </table>
@@ -23,25 +23,25 @@
               <% @sent_persons.each_with_index do |sent_person_sent_item,i| %>
               <thead class="table-secondary">
                 <tr>
-                  <th>ITEM No. <%=i+1%></th>
+                  <th>Item No. <%=i+1%></th>
                   <th></th>
                 </tr>
               </thead>
               <tr>
-                <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+                <th class="border-bottom style=width 50%"><i class="fas fa-gifts"></i> Gift</th>
                 <td class="border-bottom"><%= link_to sent_person_sent_item.product,sent_item_path(@sent_persons.ids)
                   %></td>
               </tr>
               <tr>
-                <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+                <th class="border-bottom"><i class="far fa-money-bill-alt"></i> Amount</th>
                 <td class="border-bottom"><%= sent_person_sent_item.price %></td>
               </tr>
               <tr>
-                <th><i class="far fa-comment-dots"> reason</i></th>
+                <th><i class="far fa-comment-dots"></i> Reason</th>
                 <td class="border-bottom"><%= sent_person_sent_item.reason %></td>
               </tr>
               <tr>
-                <th><i class="far fa-calendar-alt"> date</i></th>
+                <th><i class="far fa-calendar-alt"></i> Date</th>
                 <td><%= sent_person_sent_item.sent_day %></td>
               </tr>
               <% end %>
@@ -52,10 +52,10 @@
           <p>
             <%= link_to  sent_persons_path, class: "btn btn-default rounded-pill" do %>
             <i class="fas fa-arrow-circle-left"></i>
-            <span>back</span>
+              Back
             <% end %>
             <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-            <i class="fas fa-home"> home</i>
+            <i class="fas fa-home"></i> Home
             <% end %>
           </p>
         </div>
