--- a/app/views/sent_returns/show.html.erb
+++ b/app/views/sent_returns/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mb-5">
   <div class="col-100 mx-auto">
-    <h3><i class="far fa-flag"> detail</i></h3>
+    <h3><i class="far fa-flag"></i> Detail</h3>
   </div>
 </div>
 <div class="container">
@@ -10,7 +10,7 @@
         <tr>
           <th>
             <div class="m-3">
-              <i class="fas fa-child"> Registered person</i>
+              <i class="fas fa-child"></i> Registered Person
             </div>
           </th>
         </tr>
@@ -46,23 +46,23 @@
       <div class="mt-3 table-hover">
         <table>
           <tr>
-            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
+            <th class="border-bottom style=width 50%"><i class="fas fa-gifts"></i> Gift</th>
             <td class="border-bottom"><%= @sent_return.product%></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="fas fa-layer-group"> genre</i></th>
+            <th class="border-bottom"><i class="fas fa-layer-group"></i> Genre</th>
             <td class="border-bottom"><%= @sent_return.sent_item.genre.genre %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
+            <th class="border-bottom"><i class="far fa-money-bill-alt"></i> Amount</th>
             <td class="border-bottom"><%= @sent_return.price %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-file-alt"> text</i>
+            <th class="border-bottom"><i class="far fa-file-alt"></i> Text
             <td class="border-bottom"><%= @sent_return.introduction %></td>
           </tr>
           <tr>
-            <th class="border-bottom"><i class="far fa-calendar-alt"> Present date</i></th>
+            <th class="border-bottom"><i class="far fa-calendar-alt"></i> Present Date</th>
             <td class="border-bottom"><%= @sent_return.return_day %></td>
           </tr>
           <tr>
@@ -82,10 +82,10 @@
       <p>
         <%= link_to  sent_items_path, class: "btn btn-default rounded-pill" do %>
         <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
+          Back
         <% end %>
         <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
-        <i class="fas fa-home"> home</i>
+        <i class="fas fa-home"></i> Home
         <% end %>
       </p>
     </div>
