give person タイポ修正

--- a/app/views/give_items/search.html.erb
+++ b/app/views/give_items/search.html.erb
@@ -26,7 +26,7 @@
               <td><%= give_item.give_person.give_person %></td>
             </tr>
             <tr>
-              <th><i class="far fa-user"> : To</i></th>
+              <th><i class="far fa-user"></i> : To</th>
               <td><%= give_item.family_person.family_person %></td>
             </tr>
             <tr>
