--- a/app/views/give_persons/new.html.erb
+++ b/app/views/give_persons/new.html.erb
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <div class="form-group">
-          <th style="width: 40%"><i class="far fa-handshake"></i>< Connection/th>
+          <th style="width: 40%"><i class="far fa-handshake"></i> Connection</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
